[workspace]
resolver = "2"
members = [
    "kovan", 
    "kovan-map",
    "kovan-stm",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.90"
authors = ["Theo M. Bulut <vertexclique@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vertexclique/kovan"

[workspace.dependencies]
# Shared dependencies across workspace members
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
portable-atomic = { version = "1.11.1", default-features = false, features = ["require-cas", "fallback"] }

# Internal dependencies
kovan = { version = "0.1.3", path = "kovan" }

[workspace.metadata.docs.rs]
rustdoc-args = ["-C", "target-feature=+cmpxchg16b"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"
