[workspace]
resolver = "2"
members = ["kovan", "kovan-map", "kovan-mvcc", "kovan-stm"]

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.90"
authors = ["Theo M. Bulut <vertexclique@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vertexclique/kovan"
exclude = ["model_chk"]

[workspace.dependencies]
kovan = { version = "0.1.3", path = "kovan" }
kovan-map = { version = "0.1.3", path = "kovan-map" }
kovan-stm = { version = "0.1.3", path = "kovan-stm" }
kovan-mvcc = { version = "0.1.3", path = "kovan-mvcc" }

[workspace.metadata.docs.rs]
rustdoc-args = ["-C", "target-feature=+cmpxchg16b"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"
