[workspace]
resolver = "2"
members = [
    "kovan",
    "kovan-channel",
    "kovan-map",
    "kovan-mvcc",
    "kovan-stm",
    "kovan-queue",
]

[workspace.package]
version = "0.1.7"
edition = "2024"
rust-version = "1.90"
authors = ["Theo M. Bulut <vertexclique@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vertexclique/kovan"
readme = "README.md"
exclude = ["model_chk"]

[workspace.dependencies]
kovan = { version = "0.1.7", path = "kovan" }
kovan-channel = { version = "0.1.7", path = "kovan-channel" }
kovan-map = { version = "0.1.7", path = "kovan-map" }
kovan-mvcc = { version = "0.1.7", path = "kovan-mvcc" }
kovan-stm = { version = "0.1.7", path = "kovan-stm" }
kovan-queue = { version = "0.1.7", path = "kovan-queue" }

[workspace.metadata.docs.rs]
rustdoc-args = ["-C", "target-feature=+cmpxchg16b"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"
