[package]
name = "kovan-channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Multi-producer multi-consumer channels using Kovan for memory reclamation"
keywords = ["concurrency", "channel", "mpmc", "lock-free", "atomic"]
categories = ["concurrency", "data-structures"]

[lib]
name = "kovan_channel"
path = "src/lib.rs"

[dependencies]
crossbeam-utils = "0.8.21"
kovan = { workspace = true }
