[package]
name = "kovan-channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Multi-producer multi-consumer channels using Kovan for memory reclamation"
keywords = ["concurrency", "channel", "mpmc", "lock-free", "atomic"]
categories = ["concurrency", "data-structures"]
readme.workspace = true

[lib]
name = "kovan_channel"
path = "src/lib.rs"

[lints.rust]

[dependencies]
crossbeam-utils = "0.8.21"
kovan = { workspace = true }
kovan-queue = { workspace = true }

[dev-dependencies]
futures = "0.3"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bounded_spsc"
harness = false

[[bench]]
name = "bounded_mpmc"
harness = false

[[bench]]
name = "unbounded_mpmc"
harness = false

[[bench]]
name = "async_wake_latency"
harness = false
