[package]
name = "kovan-channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Multi-producer multi-consumer channels using Kovan for memory reclamation"
keywords = ["concurrency", "channel", "mpmc", "lock-free", "atomic"]
categories = ["concurrency", "data-structures"]
readme.workspace = true

[lib]
name = "kovan_channel"
path = "src/lib.rs"

[lints.rust]

[features]
# See `kovan`'s `shuttle` feature doc. Cascades so `Atomic<Node<T>>` (the
# unbounded channel's linked-list message transport, which the bounded
# channel is built on) is shuttle-instrumented; also swaps this crate's own
# `AtomicWaker` state machine (see `signal.rs`), the register-vs-wake race
# these tests target.
shuttle = ["kovan/shuttle", "kovan-queue/shuttle", "dep:shuttle"]

[dependencies]
crossbeam-utils = "0.8.21"
kovan = { workspace = true }
kovan-queue = { workspace = true }
shuttle = { version = "0.9.1", optional = true }

[dev-dependencies]
futures = "0.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
shuttle = "0.9.1"

[[bench]]
name = "bounded_spsc"
harness = false

[[bench]]
name = "bounded_mpmc"
harness = false

[[bench]]
name = "unbounded_mpmc"
harness = false

[[bench]]
name = "async_wake_latency"
harness = false
