[package]
name = "kovan-map"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lock-free concurrent hash map using kovan memory reclamation"
keywords = ["concurrency", "hashmap", "lock-free", "wait-free"]
categories = ["concurrency", "data-structures", "no-std"]

[lib]
name = "kovan_map"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dependencies]
kovan = { workspace = true }
portable-atomic = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dashmap = "6.1"
flurry = "0.5"
evmap = "10.0"

[[bench]]
name = "comparison"
harness = false
