[package]
name = "kovan-mvcc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-Version Concurrency Control (MVCC) implementation based on the Percolator model using Kovan"
keywords = ["concurrency", "mvcc", "transaction", "percolator", "database"]
categories = ["concurrency", "database-implementations"]
readme.workspace = true

[lib]
name = "kovan_mvcc"
path = "src/lib.rs"

[features]
# See `kovan`'s `shuttle` feature doc. `LockTable` has no atomics of its
# own (it's built entirely on `kovan_map::HashMap`), so this crate needs no
# type-swap plumbing of its own -- just the cascade so `HashMap`'s
# `insert_if_absent` (the lock-acquire primitive `LockTable::try_lock`
# calls) is shuttle-instrumented.
shuttle = ["kovan-map/shuttle"]

[dependencies]
uuid = { version = "1.18", features = ["v4"] }
kovan = { workspace = true }
kovan-map = { workspace = true }
parking_lot = "0.12"

[dev-dependencies]
rand = "0.9"
shuttle = "0.9.1"
