[package]
name = "kovan-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance queue primitives and disruptor implementation for Kovan."
keywords = ["concurrency", "queue", "disruptor", "lock-free"]
categories = ["concurrency", "data-structures", "no-std"]
readme.workspace = true

[features]
# See `kovan`'s `shuttle` feature doc. Cascades so `SegQueue`'s segment
# pointers (`kovan::Atomic<T>`) are shuttle-instrumented; also swaps this
# crate's own `ArrayQueue` head/tail/stamp atomics (see `array_queue.rs`),
# which are self-contained (no kovan dependency) and need their own swap.
shuttle = ["kovan/shuttle", "dep:shuttle"]

[dependencies]
crossbeam-utils = "0.8"
kovan = { workspace = true }
shuttle = { version = "0.9.1", optional = true }

[dev-dependencies]
shuttle = "0.9.1"
