[package]
name = "kovan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance wait-free memory reclamation for wait-free data structures. Bounded memory usage, predictable latency."
keywords = ["concurrency", "lock-free", "memory-reclamation", "smr"]
categories = ["concurrency", "memory-management", "no-std"]
readme.workspace = true

exclude = ["model_chk"]

[package.metadata.docs.rs]
rustdoc-args = ["-C", "target-feature=+cmpxchg16b"]

[lib]
name = "kovan"
path = "src/lib.rs"

[features]
default = ["std"]
std = []          # Enable std-dependent features.
nightly = []      # Enable nightly-only optimizations.
# Swaps the pointer-word atomic backing `Atomic<T>` and the reclamation
# guard's protect-load path for shuttle's instrumented equivalent, so
# shuttle's scheduler gets a yield point at every pointer load/store/CAS.
# Dev/test only (`shuttle` is an optional dependency): zero cost unless a
# crate explicitly opts in for its shuttle test binary.
shuttle = ["dep:shuttle"]

[dependencies]
once_cell = { version = "1.21", default-features = false, features = ["alloc"] }
portable-atomic = { version = "1.11.1", default-features = false, features = [
    "require-cas",
    "fallback",
] }
shuttle = { version = "0.9.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
shuttle = "0.9.1"
# Other memory-reclamation crates, used only by the comparison benchmark
# (`benches/comparison.rs`). Commented out together with that benchmark's
# "other"-library code; uncomment both to re-enable the cross-library comparison.
# crossbeam-epoch = "0.9.18"
# seize = "0.5.1"
# haphazard = "0.1.8"

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "throughput"
harness = false
